--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
     "fastify": "^3.28.0",
     "fastify-static": "^4.6.1",
     "handlebars": "^4.7.7",
+    "htmx.org": "^1.7.0",
     "point-of-view": "^5.2.0"
   },
   "devDependencies": {
     "@swc/core": "^1.2.165",
     "@types/livereload": "^0.9.2",
+    "autoprefixer": "^10.4.4",
     "connect-livereload": "^0.6.1",
     "desm": "^1.2.0",
     "livereload": "^0.9.3",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.5.4",
     "vite": "^2.9.4",
     "vite-plugin-full-reload": "^1.0.0",
