--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "livereload": "^0.9.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.12",
+    "prettier": "^2.6.2",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.5.4",
     "vite": "^2.9.4",
