--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "serve": "node dist/server"
   },
   "dependencies": {
+    "@alpinejs/morph": "^3.9.6",
+    "alpinejs": "^3.9.6",
     "fastify": "^3.28.0",
     "fastify-static": "^4.6.1",
     "handlebars": "^4.7.7",
