--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "run-p dev:*",
-    "dev:reload": "livereload -ee 'ts,hbs' -w 100  src",
+    "dev:reload": "livereload -ee 'ts,tsx' -w 100 src",
     "dev:client": "vite build -w -c src/vite.config.js",
     "dev:server": "vite",
     "build": "run-s build:*",
@@ -17,17 +17,20 @@
     "@alpinejs/morph": "^3.9.6",
     "alpinejs": "^3.9.6",
     "fastify": "^3.28.0",
+    "fastify-plugin": "^3.0.1",
     "fastify-static": "^4.6.1",
-    "handlebars": "^4.7.7",
+    "glob": "^8.0.1",
+    "htm": "^3.1.0",
     "htmx.org": "^1.7.0",
-    "point-of-view": "^5.2.0"
+    "preact": "^10.7.1",
+    "vhtml": "^2.2.0"
   },
   "devDependencies": {
+    "@kitql/vite-plugin-watch-and-run": "^0.3.0",
     "@swc/core": "^1.2.165",
-    "@types/livereload": "^0.9.2",
+    "@types/node": "^17.0.24",
+    "@types/vhtml": "^2.2.4",
     "autoprefixer": "^10.4.4",
-    "connect-livereload": "^0.6.1",
-    "desm": "^1.2.0",
     "livereload": "^0.9.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.12",
@@ -35,7 +38,6 @@
     "tailwindcss": "^3.0.24",
     "typescript": "^4.5.4",
     "vite": "^2.9.4",
-    "vite-plugin-full-reload": "^1.0.0",
     "vite-plugin-node": "^0.0.19"
   }
 }
